01-flux/gilfoyle/apps/immich/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: immich
  namespace: immich
spec:
  parentRefs:
    - name: gw-external
      namespace: envoy-gateway
  hostnames:
    - "immich.themiple.ru"
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: immich-server
          port: 2283
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
